2003-06-23 Craig Franklin <craigfranklin@attbi.com>
  * Extended the legal syntax for difference of coff symbols within the same
    section.

2003-06-22 Craig Franklin <craigfranklin@attbi.com>
  * Changed coff to use byte addressing for program memory of 18xx devices.
  * Changed absolute coff sections generated with org directive to use
    org_"number" for a name instead of org_"address".
  * Added missing relocation for "$" symbol.
  * Fixed bug in gpvo which could cause section data to not be printed for
    18xx devices.
  * Added range warning to gplink for 18xx relative branches.
  * Changed default behavior of the 18xx access bit in gplink to be like
    gpasm. 
  * Changed build directory for rpms.

2003-06-14 Craig Franklin <craigfranklin@attbi.com>
  * Fixed error in the range check for 17xx movpf and movfp instructions.

2003-06-04 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.4 Released.
  * Replaced or removed obsolete macros in configure.ac.

2003-06-01 Craig Franklin <craigfranklin@attbi.com>
  * Added new processors:
    p16c557 p16c747 p16f648a p16f684 p16f737 p16f767 p16f777 p18f2331 
    p18f2431 p18f2439 p18f2539 p18f4331 p18f4431 p18f4439 p18f4539 
    p18f6520 p18f6525 p18f6585 p18f6621 p18f6680 p18f8520 p18f8525
    p18f8585 p18f8621 p18f8680 rf675f rf675h rf675k
  * Updated header files and linker scripts.

2003-05-20 Craig Franklin <craigfranklin@attbi.com>
  * Updated scripts to automake-1.6 and autoconf-2.57.
  * Ran autoscan and fixed reported problems.
  * Added AM_MAINTAINER_MODE to autoconf.

2003-05-10 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.3 Released.  
  * Fixed seg fault in gpasm when difference between coff symbols is 
    calculated. 
  * Fixed map file bug that caused the end section address to be reported
    incorrectly.
  * Added gplink command line option to fill unused unprotected program
    memory.
  * Added gplink testsuite.

2003-05-06 Craig Franklin <craigfranklin@attbi.com>