@@ -6,7 +6,7 @@ Scott Dattalo <scott@dattalo.com>
 James Cameron <james.cameron@digital.com>
 Stefan Petersen <spe@stacken.kth.se>
 Eric Smith <eric@brouhaha.com>
-Alessandro Zummo <azummo@ita.flashnet.it>
+Alessandro Zummo <azummo@towertech.it>
 Andrew Burgess <aab@cichlid.com>
 Bruce Stough <sbs@wavefront.com>
 Tommy Thorn <thorn@acm.org>
