@@ -436,6 +436,42 @@ A'{STR_QCHAR}'           {
 			 }
 %%
 
+static char *
+to_lower_case(char *name)
+{
+  char *new;
+  char *ptr;
+
+  ptr = new = strdup(name);
+
+  while (*ptr != '\0') {
+    *ptr = tolower(*ptr);
+    ptr++;
+  }
+
+  return new;
+}
+
+static void
+search_pathes(struct source_context *new, char *name)
+{
+  char tryname[BUFSIZ];
+  int i;
+
+  for(i = 0; i < state.path_num; i++) {
+    strcpy(tryname, state.paths[i]);
+    strcat(tryname, COPY_CHAR);
+    strcat(tryname, name);
+    new->f = fopen(tryname, "rt");
+    if(new->f) {
+      new->name = strdup(tryname);
+      break;
+    }
+  }
+
+  return; 
+}
+
 void open_src(char *name, int isinclude)
 {
   extern FILE *yyin;
@@ -445,23 +481,23 @@ void open_src(char *name, int isinclude)
 
   new->f = fopen(name, "rt");
   if(new->f)
-	  new->name = strdup(name);
+    new->name = strdup(name);
   else if(isinclude && (strchr(name, PATH_CHAR) == 0)) { 
-	  /* If include file and no PATH_CHAR in name, try searching include 
-             path */
-	  char tryname[BUFSIZ];
-	  int i;
+    /* If include file and no PATH_CHAR in name, try searching include 
+       path */
+    search_pathes(new, name);
 
-	  for(i = 0; i < state.path_num; i++) {
-		  strcpy(tryname, state.paths[i]);
-		  strcat(tryname, COPY_CHAR);
-		  strcat(tryname, name);
-		  new->f = fopen(tryname, "rt");
-		  if(new->f) {
-			  new->name = strdup(tryname);
-			  break;
-		  }
-	  }
+    if (new->f == NULL) {
+      /* We didn't find a match so check for lower case.  This is mainly for 
+         Microchip examples and some includes in which filenames were written
+         without regard to case */    
+      char *lower_case_name = to_lower_case(name);
+      search_pathes(new, lower_case_name);      
+      free(lower_case_name);  
+
+      if (new->f != NULL)
+        gpwarning(GPW_UNKNOWN, "found lower case match for include filename");    
+    }
   }
   if(new->f)
     new->lst.f = fopen(new->name, "rt");
