@@ -212,7 +212,7 @@ int main(int argc, char *argv[])
       break;
   }
 
-  if (optind < argc) {
+  if ((optind + 1) == argc) {
     filename = argv[optind];
   } else {
     usage = 1;
