@@ -1,3 +1,10 @@
+2003-06-28 Craig Franklin <craigfranklin@attbi.com>
+  * gputils 0.11.5 Released.
+  * Fixed byte count when RES directive is used in 18xx data sections.
+  * Display help when multiple files are passed to gpasm, gpdasm, gpvo, 
+    and gpvc on the command line.
+  * Check for lower case filename if include file is not found.
+
 2003-06-23 Craig Franklin <craigfranklin@attbi.com>
   * Extended the legal syntax for difference of coff symbols within the same
     section.
